--- a/views/posts/post-add.ejs
+++ b/views/posts/post-add.ejs
@@ -25,7 +25,7 @@
 
         <!-- Begin Page Content -->
         <div class="container-fluid">
-          <h1>user add</h1>
+          <h1>Post add</h1>
         <form  action="/posts/postadd" method="post" name="firm">
 
 
